--- a/Untitled15.ipynb
+++ b/Untitled15.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled15.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMWvnJztMD5Egt9swpFFOS8",
+      "authorship_tag": "ABX9TyNIOOY5Fhtvf06eU/uuxFVW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +70,7 @@
         "%matplotlib inline\n",
         "import seaborn as sns"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -90,14 +90,14 @@
           "height": 203
         },
         "id": "cqWiqz9cGkjo",
-        "outputId": "5872de75-b2e5-4334-8a3c-623ed1164012"
+        "outputId": "29040099-fa03-419c-c257-cedcc345bc10"
       },
       "source": [
         "sns.get_dataset_names()\n",
         "df = sns.load_dataset('iris')\n",
         "df.head()\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -185,7 +185,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 4
         }
       ]
     },
@@ -206,7 +206,7 @@
       "source": [
         "x = df.iloc[:, [0, 1, 2, 3]].values"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,7 +226,7 @@
           "height": 295
         },
         "id": "5uwRCfHNKilv",
-        "outputId": "b3123b05-b02c-4aa1-95ff-da686f4c5353"
+        "outputId": "f0ec2974-7f39-455e-a657-fb050d380bdb"
       },
       "source": [
         "from sklearn.cluster import KMeans\n",
@@ -241,7 +241,7 @@
         "plt.ylabel('WCSS') ## within cluster sum of squares\n",
         "plt.show()  \n"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -285,7 +285,7 @@
         "kmeans = KMeans(n_clusters = 3, init = 'k-means++', max_iter= 300, n_init= 10, random_state = 0)\n",
         "y_kmeans = kmeans.fit_predict(x)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -295,12 +295,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "98SpZIYiiYJY",
-        "outputId": "763a54b0-1524-4b05-d14f-bce53eb824ce"
+        "outputId": "ea6a0672-0dde-40ba-9843-64bb1a89f1ba"
       },
       "source": [
         "print(y_kmeans)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,7 +332,7 @@
           "height": 281
         },
         "id": "fHHhmJZAOqfd",
-        "outputId": "fc7565b1-0852-417d-fae7-31230743cce5"
+        "outputId": "8dbb2b82-7134-4d3c-86d5-74424f42a313"
       },
       "source": [
         "plt.scatter(x[y_kmeans == 0, 0], x[y_kmeans == 0, 1], s = 100, c = 'red', label = 'Iris-setosa')\n",
@@ -345,7 +345,7 @@
         " \n",
         "\n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -360,6 +360,35 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rpT4uCfvyC7h"
+      },
+      "source": [
+        " ***CONCLUSION***"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "p0PW_TZJyLYo"
+      },
+      "source": [
+        "THE OPTIMUM NUMBER OF CLUSTERS IS 3 IN IRIS DATASET AND THEIR VISUALISATION IS SHOWN "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VkvNJtg7yX63"
+      },
+      "source": [
+        "## **THANK YOU**"
       ]
     }
   ]
